# DroughtScan

./: README.md  pyproject.toml  requirements.txt
Tests/: README.md  example_usage.py  user_guide.md  visualization_guide.md
Tests/data/: ARPAE_Q_month.csv  bacino_pontelagoscuro.dbf  bacino_pontelagoscuro.shp  po_basin_piacenza.dbf  po_basin_piacenza.shp  po_basin_piacenza.shx
drought_scan/: __init__.py  core.py
drought_scan/scenarios/: ESM_scenarios.py
drought_scan/utils/: __init__.py  data_io.py  drought_indices.py  hydrology.py  statistics.py  visualization.py
paper/: joss-paper.md  paper.bib
temp_tests/data/: bacino_pontelagoscuro.shx
tests/: README.md  ds_test.py  example_usage.py
tests/docs/: user_guide.md
utils/: README.md  decorators.py  visualization.py
