[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drought_scan"
version = "0.1.0"
description = "Drought monitoring and seasonal prediction toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU 3" }
authors = [{ name="Arianna Di Paola", email="arianna.dipaola@cnr.it" }]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "shap",
    "scipy"
]
