[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drought-scan"
version = "1.0.0"
description = "Drought monitoring and seasonal prediction toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU 3" }
authors = [{ name="Arianna Di Paola", email="arianna.dipaola@cnr.it" }]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cmcrameri",
    "scipy",
    "geopandas",
    "regionmask",
    "netCDF4",
    "dateutil",
    "itertools",
    "datetime",
    "warnings"
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "pre-commit"]